[project]
name = "reddit-scraper"
version = "0.1.0"
description = "Reddit web scraper for r/askreddit posts"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
